<resources>
    <string name="app_name">PixelMixer</string>
    <string name="welcome_string">Welcome to PixelMixer</string>
    <string name="info_text_preload">PixelMixer is an implementation of a 15 puzzle using a user selected image. Click Get Image to select the image that you want to use.</string>
    <string name="info_text_after_load">Click on the image to start the game!</string>
    <string name="retrieve_label">Click here to get some pictures</string>
    <string name="congratulations_text">Congratulations! You have solved the Puzzle</string>

    <!-- Alert text -->
    <string name="bitmap_alert_text">Something went wrong loading the image. Try another image</string>
    <string name="negative_button_text">OK</string>


    <!-- GameFragment strings -->
    <string name="total_moves_label">Total Moves:</string>
    <string name="elapsed_time_label">Elapsed Time:</string>
    <string name="get_images">Get Image</string>
    <string name="row_content">Game Piece</string>

    <!-- Image load strings -->
    <string name="load_failure">Failed to load image</string>
    <string name="image_content_description">Image to use for the game</string>
    <string name="photographer_label">Photographer</string>
    <string name="image_publish_date_label">Published:</string>
    <string name="image_uri_label">Image Url:</string>
</resources>