<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.virtualtimetours.pixelmixer.ui.main.viewmodels.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.virtualtimetours.pixelmixer.ui.main.fragments.GameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
            android:layout_marginVertical="@dimen/primary_vertical_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/total_moves_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_moves_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalMoves}"
                app:layout_constraintLeft_toRightOf="@+id/total_moves_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/elapsed_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time_label"
                app:layout_constraintRight_toLeftOf="@+id/elapsed_time_value"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/elapsed_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.elapsedTime}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:id="@+id/game_board"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/primary_horizontal_margin"
            android:layout_marginVertical="@dimen/primary_vertical_margin"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_layout">

            <TableRow
                android:id="@+id/row_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/row_one_column_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionOneOneBitmap}" />

                <ImageView
                    android:id="@+id/row_one_column_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionOneTwoBitmap}" />

                <ImageView
                    android:id="@+id/row_one_column_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionOneThreeBitmap}" />

                <ImageView
                    android:id="@+id/row_one_column_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionOneThreeBitmap}" />
            </TableRow>

            <TableRow
                android:id="@+id/row_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/row_two_column_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionTwoOneBitmap}" />

                <ImageView
                    android:id="@+id/row_two_column_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionTwoTwoBitmap}" />

                <ImageView
                    android:id="@+id/row_two_column_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionTwoThreeBitmap}" />

                <ImageView
                    android:id="@+id/row_two_column_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionTwoFourBitmap}" />
            </TableRow>

            <TableRow
                android:id="@+id/row_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/row_three_column_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionThreeOneBitmap}" />

                <ImageView
                    android:id="@+id/row_three_column_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionThreeTwoBitmap}" />

                <ImageView
                    android:id="@+id/row_three_column_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionThreeThreeBitmap}" />

                <ImageView
                    android:id="@+id/row_three_column_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionThreeFourBitmap}" />
            </TableRow>

            <TableRow
                android:id="@+id/row_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/row_four_column_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionFourOneBitmap}" />

                <ImageView
                    android:id="@+id/row_four_column_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionFourTwoBitmap}" />

                <ImageView
                    android:id="@+id/row_four_column_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionFourThreeBitmap}" />

                <ImageView
                    android:id="@+id/row_four_column_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/row_content"
                    android:src="@{viewModel.positionFourFourBitmap}" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
